# genetrail-core

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake.in
include/: AbstractMatrix.h  BoostGraph.h  BoostGraphParser.h  BoostGraphProcessor.h  Category.h  CategoryDatabase.h  CombineReducedEnrichments.h  ConfidenceInterval.h  DenseColumnSubset.h  DenseMatrix.h  Editor.h  EntityDatabase.h  Exception.h  File.h  Matrix.h  Metadata.h  Statistic.h  macros.h
src/: AbstractMatrix.cpp  BoostGraphProcessor.cpp  Category.cpp  CategoryDatabase.cpp  CombineReducedEnrichments.cpp  DenseColumnSubset.cpp  DenseMatrix.cpp  EntityDatabase.cpp  Exception.cpp  File.cpp  Metadata.cpp
